cert-manager/templates/ciliumclusterwidenetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cert-manager-http01-solver
spec:
  egress:
  - {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/name: ingress-nginx
        k8s:app.kubernetes.io/component: controller
        k8s:app.kubernetes.io/instance: ingress-nginx
        k8s:io.kubernetes.pod.namespace: ingress-nginx
    - matchLabels:
        k8s:app.kubernetes.io/name: traefik
        k8s:io.kubernetes.pod.namespace: traefik
    toPorts:
    - ports:
      - port: http
  endpointSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: 'true'
