cert-manager/templates/startupapicheck-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-startupapicheck
  annotations:
    helm.sh/hook: post-install
    helm.sh/hook-weight: "1"
    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
  labels:
    app.kubernetes.io/name: startupapicheck
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/component: startupapicheck
spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: startupapicheck
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/component: startupapicheck
  policyTypes:
  - Egress
